--- a/pom.xml
+++ b/pom.xml
@@ -11,31 +11,69 @@
 	<groupId>com.microservice.demo</groupId>
 	<artifactId>microservice-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 	<name>microservice-demo</name>
 	<description>Microservices demo project for Spring Boot</description>
+	<modules>
+		<module>twitter-to-kafka-service</module>
+	</modules>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
+		<spring-boot.version>3.0.2</spring-boot.version>
+		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
 	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter</artifactId>
+				<version>${spring-boot.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-test</artifactId>
+				<scope>test</scope>
+				<version>${spring-boot.version}</version>
+			</dependency>
+
+
+<!--			<dependency>-->
+<!--				<groupId>org.twitter4j</groupId>-->
+<!--				<artifactId>twitter4j-core</artifactId>-->
+<!--				<version>4.1.2</version>-->
+<!--			</dependency>-->
+
+
+<!--			<dependency>-->
+<!--				<groupId>org.twitter4j</groupId>-->
+<!--				<artifactId>twitter4j-stream</artifactId>-->
+<!--				<version>4.0.7</version>-->
+<!--			</dependency>-->
+
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<version>${spring-boot.version}</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${maven-compiler-plugin.version}</version>
+					<configuration>
+						<release>11</release>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 </project>
